--- a/AboutUs.html
+++ b/AboutUs.html
@@ -19,7 +19,7 @@
   	<label for="menu-icon"></label>
   	<nav class="nav"> 		
   		<ul class="pt-5">
-  			<li><a href="Home.html">Home</a></li>
+  			<li><a href="index.html">Home</a></li>
   			<li><a href="AboutUs.html">About Us</a></li>
   			<li><a href="Services.html">Services</a></li>
   			<li><a href="Contact.html">Contact</a></li>
