--- a/Services.html
+++ b/Services.html
@@ -37,7 +37,7 @@
         <ul style="list-style-type: square;">
             <li class="text">Design and Development of Websites</li>
             <div style="font-size: 1rem; font-weight: 700; word-spacing: 0.6rem; margin-top: 1rem; margin-bottom: 1rem;">
-                We are able to provide innovative and creative designs of business websites for our clients. We provide our clients with graphic designs, themes, logo designs, layout of pages and other design design factors for your business website.
+                We are able to provide innovative and creative designs of business websites for our clients. We provide our clients with graphic designs, themes, logo designs, layout of pages and other design factors for your business website.
             </div>
             <li class="text">Content Writing for Websites</li>
             <div style="font-size: 1rem; font-weight: 700; word-spacing: 0.6rem; margin-top: 1rem; margin-bottom: 1rem;">
